# crud-app

./: start.bat
poetry-demo/: .env  Dockerfile  Music - Shortcut.lnk  config.py  docker-compose.yml  main.py  pyproject.toml  sqlalchemycheck.py  test.db
poetry-demo/secrets/: HOST  NAME  PASSWORD
poetry-demo/src/: crud.py  database.py  healthcheck.py  models.py  schema.py  tempdatabase.py
